<resources>
    <string name="app_name">TCD</string>
    <string name="login">Войти</string>
    <string name="password">Пароль</string>
    <string name="username">Имя пользователя</string>
    <string name="printers_list">Выберите принтер</string>
    <string name="printer">Распечатать</string>
    <string name="shop">Магазин</string>
    <string name="loadcatalog">Каталог товаров</string>
    <string name="createdocument">Создать документ</string>
    <string name="recalcgoods">Инвентаризация</string>
    <string name="overestimate">Переоценка</string>
    <string name="printlabels">Печать ценников</string>
    <string name="nomenсlatura">Номенклатура</string>
    <string name="loadfulllist">Загрузить весь список товаров</string>
    <string name="loadremainder">Загрузить товары по остаткам</string>
    <string name="loadgroups">Загрузить товары с отбором по группам</string>
    <string name="loadturnover">Загрузить товары по оборотам за период</string>
    <string name="remains">Остатки онлайн</string>
    <string name="txtLoadSelectedGroups">Загрузить выбранные группы товаров</string>
    <string name="shop_select">Выбор магазина</string>
    <string name="login_select">Выбор пользователя</string>
    <string name="end">Окончание</string>
    <string name="ok">OK</string>
    <string name="begin">Начало</string>
    <string name="cancel">Отмена</string>
    <string name="code">Код</string>
    <string name="plu">PLU</string>
    <string name="barcode">Штрихкод</string>
    <string name="barcode_short">ШК</string>
    <string name="datamatrix">DataMatrix</string>
    <string name="barcode_or_code">Штрихкод/код</string>
    <string name="pdf417">Акцизная марка</string>
    <string name="price">Цена</string>
    <string name="entercode">Введите код</string>
    <string name="upload">Выгрузить</string>
    <string name="count">Кол-во</string>
    <string name="add">Добавить</string>
    <string name="search">Поиск</string>
    <string name="removeAll">Очистить</string>
    <string name="detailTitle">Информация по товару</string>
    <string name="name">Наименование</string>
    <string name="OverallCount">Общее кол-во:</string>
    <string name="scanner">Ввод сканером</string>
    <string name="manual">Ввод руками</string>
    <string name="save">Сохранить</string>
    <string name="title_quantity_dialog">Обновление количества:</string>
    <string name="chronology">Хронология</string>
    <string name="label_printing">Печать этикеток</string>
    <string name="print">Печать</string>
    <string name="period_select">Укажите период</string>
    <string name="menu_clean">Очистить</string>
    <string name="menu_send">Завершить</string>
    <string name="menu_chronology">Хронология</string>
    <string name="menu_insert">Добавить</string>
    <string name="totalCount">Общее кол-во</string>
    <string name="remain">Остаток</string>
    <string name="doc">Последний приходный документ</string>
    <string name="sales">Оперативные продажи с касс</string>
    <string name="price_remains">Цена</string>
    <string name="remains_request">Запросить информацию</string>
    <string name="options_title">Настройки</string>
    <string name="options_hint_server">Адрес сервера</string>
    <string name="options_template_server">Шаблон: http://192.168.0.154/</string>
    <string name="options_hint_server_update">Адрес сервера обновлений</string>
    <string name="options_template_server_update">Шаблон: http://192.168.0.154:3000/</string>
    <string name="options_check_update">Проверить обновление</string>
    <string name="notification_title">Доступна новая версия</string>
    <string name="notification_text">Выполните установку</string>
    <string name="refund">Списание/возврат</string>
</resources>