<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_clean"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/menu_clean" />
    <item
        android:id="@+id/menu_setting"
        android:icon="@drawable/ic_qr_code_scanner_black_24dp"
        android:title="@string/menu_setting" />
    <item
        android:id="@+id/menu_send"
        android:icon="@drawable/ic_send_black_24dp"
        android:title="@string/menu_send" />
    <item
        android:id="@+id/menu_chronology"
        android:icon="@drawable/ic_list_black_24dp"
        android:title="@string/menu_chronology" />
    <item
        android:id="@+id/menu_insert"
        android:icon="@drawable/ic_post_add_black_24dp"
        android:title="@string/menu_insert" />
</menu>