<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.inventory.detail.InventoryItemDetailFragment">

    <TextView
        android:id="@+id/txtDetailTitle"
        style="@style/InventoryItemDetailHeader"
        android:text="@string/detailTitle"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/InventoryItemDetailTitle"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDetailTitle" />

    <TextView
        android:id="@+id/txtDetailName"
        style="@style/InventoryItemDetailTitleValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <TextView
        android:id="@+id/textView4"
        style="@style/InventoryItemDetailTitle"
        android:text="@string/barcode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDetailName" />

    <TextView
        android:id="@+id/txtDetailBarcode"
        style="@style/InventoryItemDetailTitleValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView4" />

    <TextView
        android:id="@+id/textView6"
        style="@style/InventoryItemDetailTitle"
        android:text="@string/code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDetailBarcode" />

    <TextView
        android:id="@+id/txtDetailCode"
        style="@style/InventoryItemDetailTitleValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView6" />


    <TextView
        android:id="@+id/textView8"
        style="@style/InventoryItemDetailTitle"
        android:text="@string/plu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDetailCode" />

    <TextView
        android:id="@+id/txtDetailPLU"
        style="@style/InventoryItemDetailTitleValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView8" />

    <TextView
        android:id="@+id/textView10"
        style="@style/InventoryItemDetailTitle"
        android:text="@string/price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDetailPLU" />

    <TextView
        android:id="@+id/txtDetailPrice"
        style="@style/InventoryItemDetailTitleValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView10" />

</androidx.constraintlayout.widget.ConstraintLayout>