<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.remains.RemainsFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilBarcode"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/barcode_or_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtBarcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="13"
            android:maxLines="1"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColorHint="#757575"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        style="@style/InventoryItemDetailTitle"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilBarcode" />

    <TextView
        android:id="@+id/txtRemainsName"
        style="@style/RemainsTitleValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <TextView
        android:id="@+id/textView4"
        style="@style/InventoryItemDetailTitle"
        android:text="@string/barcode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtRemainsName" />

    <TextView
        android:id="@+id/txtRemainsBarcode"
        style="@style/RemainsTitleValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView4" />

    <TextView
        android:id="@+id/textView6"
        style="@style/InventoryItemDetailTitle"
        android:text="@string/code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtRemainsBarcode" />

    <TextView
        android:id="@+id/textView16"
        style="@style/InventoryItemDetailTitle"
        android:text="@string/plu"
        app:layout_constraintBaseline_toBaselineOf="@id/textView6"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/txtRemainsPLU"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/txtRemainsCode"
        style="@style/RemainsTitleValue"
        android:layout_width="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView6" />

    <TextView
        android:id="@+id/txtRemainsPLU"
        style="@style/RemainsTitleValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtRemainsCode"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView10"
        style="@style/InventoryItemDetailTitle"
        android:text="@string/price_remains"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtRemainsPLU" />

    <TextView
        android:id="@+id/txtRemainsPrice"
        style="@style/RemainsTitleValue"
        app:layout_constraintEnd_toStartOf="@+id/txtRemainsRemain"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView10" />

    <TextView
        android:id="@+id/textView11"
        style="@style/InventoryItemDetailTitle"
        android:text="@string/remain"
        app:layout_constraintBaseline_toBaselineOf="@id/textView10"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="@+id/txtRemainsRemain"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <TextView
        android:id="@+id/txtRemainsRemain"
        style="@style/RemainsTitleValue"
        app:layout_constraintBottom_toBottomOf="@+id/txtRemainsPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtRemainsPrice"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        style="@style/InventoryItemDetailTitle"
        android:text="@string/doc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtRemainsRemain" />

    <TextView
        android:id="@+id/txtRemainsDoc"
        style="@style/RemainsTitleValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView12" />

    <TextView
        android:id="@+id/textView13"
        style="@style/InventoryItemDetailTitle"
        android:text="@string/sales"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtRemainsDoc" />

    <TextView
        android:id="@+id/txtRemainsSales"
        style="@style/RemainsTitleValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView13" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/menu_remains_bottom_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>