<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CatalogueActivity">

    <Button
        android:id="@+id/btnLoadFull"
        style="@style/Theme.TCD.CustomButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:lines="2"
        android:onClick="btnLoadFull"
        android:text="@string/loadfulllist"
        app:layout_constraintBottom_toTopOf="@id/btnLoadRemainders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btnLoadRemainders"
        style="@style/Theme.TCD.CustomButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:fontFamily="cursive"
        android:onClick="btnLoadRemainders"
        android:text="@string/loadremainder"
        app:layout_constraintBottom_toTopOf="@id/btnLoadByGroups"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLoadFull"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btnLoadByGroups"
        style="@style/Theme.TCD.CustomButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:onClick="btnLoadByGroups"
        android:text="@string/loadgroups"
        app:layout_constraintBottom_toTopOf="@id/btnLoadByPeriod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLoadRemainders"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btnLoadByPeriod"
        style="@style/Theme.TCD.CustomButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:onClick="btnLoadByPeriod"
        android:text="@string/loadturnover"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLoadByGroups"
        tools:ignore="UsingOnClickInXml" />
</androidx.constraintlayout.widget.ConstraintLayout>